--- a/scss/_base_styles.scss
+++ b/scss/_base_styles.scss
@@ -15,7 +15,8 @@ a{
 }
 
 .wrap{
-	height: 100vh;
+	height: calc(100vh - 50px);
+	padding-top:50px;
 	min-height:500px;
 }
 
